# test-mlir

./: CMakeLists.txt  FileUtils.h  main.cpp
docs/: HexagonDoubleBufferDMALoweringExtPass.md  HexagonDoubleBufferPlanRewriteExtPass.md  ScheduleDoubleBufferLoadStoreExtPass.md
include/hexagon/Common/: Common.h  DMATransferUtil.h
include/hexagon/Conversion/: CMakeLists.txt
include/hexagon/Conversion/AffineToLLVM/: AffineToLLVM.h  CMakeLists.txt  Passes.h  Passes.td
include/hexagon/Conversion/DMAToLLVM/: CMakeLists.txt  DMAExternalFnNames.h  DMAToLLVM.h  Passes.h  Passes.td
include/hexagon/Conversion/HexKLToLLVM/: CMakeLists.txt  HexKLExternalFnNames.h  HexKLToLLVM.h  Passes.h  Passes.td
include/hexagon/Conversion/HexagonMemToLLVM/: CMakeLists.txt  HexagonMemExternalFnNames.h  HexagonMemToLLVM.h  Passes.h  Passes.td
include/hexagon/Conversion/LinalgToLLVM/: CMakeLists.txt  Common.h  LinalgToLLVM.h  LowerConstantsSeparately.h  Passes.h  Passes.td  SplitReductionUtils.h  VTCMTilingOptions.h
include/hexagon/Dialect/: CMakeLists.txt
include/hexagon/Transforms/: CMakeLists.txt  CopyDirection.h  LinalgUtils.h  OptionsParsing.h  PackUnpackUtils.h  Passes.h  Passes.td  Transforms.h
include/triton-shared/Analysis/: MaskAnalysis.h  OpFoldResultUtils.h  PtrAnalysis.h  UseAnalysis.h
include/triton-shared/AnalysisStructured/: PtrAnalysis.h
include/triton-shared/Conversion/: MemorySpaces.h
include/triton-shared/Conversion/StructuredToMemref/: Passes.h  Passes.td  StructuredToMemref.h
include/triton-shared/Conversion/TritonArithToLinalg/: ConversionPatterns.hpp  ConversionTools.h  Passes.h  Passes.td  TritonArithToLinalg.h
include/triton-shared/Conversion/TritonPtrToMemref/: Passes.h  Passes.td  TritonPtrToMemref.h
include/triton-shared/Conversion/TritonToLinalg/: Passes.h  Passes.td  TritonToLinalg.h
include/triton-shared/Conversion/TritonToLinalgExperimental/: CollapseShape.h  Passes.h  Passes.td  ReconcilePtrCasts.h  TritonToLinalgExperimental.h  TritonToPtr.h
include/triton-shared/Conversion/TritonToStructured/: Passes.h  Passes.td  TritonToStructured.h
include/triton-shared/Conversion/TritonToUnstructured/: Passes.h  Passes.td  TritonToUnstructured.h
include/triton-shared/Conversion/UnstructuredToMemref/: Passes.h  Passes.td  UnstructuredToMemref.h
include/triton-shared/Transform/AddLLVMDebugInfo/: AddLLVMDebugInfo.h  Passes.h  Passes.td
include/triton-shared/Utils/: Utils.h
lib/: CMakeLists.txt
lib/hexagon/: CMakeLists.txt
lib/hexagon/Common/: CMakeLists.txt  Common.cpp  DMATransferUtil.cpp
lib/hexagon/Conversion/AffineToLLVM/: AffinePipelineFusionPass.cpp  AffineTileMemoryPass.cpp  AffineTilingPass.cpp  AffineToLLVM.cpp  AffineToLLVMPass.cpp  AffineVectorize.cpp  CMakeLists.txt
lib/hexagon/Dialect/: CMakeLists.txt
lib/hexagon/Transforms/: AddFastMathPass.cpp  AnnotateForLoopKindPass.cpp  AnnotateMemrefCopyDirectionPass.cpp  CMakeLists.txt  CollapseAddressSpace.cpp  ConvTilingPass.cpp  ConvertLayoutPass.cpp  ConvertToHexagonmem.cpp  ConvertZeroSizeMemrefPass.cpp  CopyCanonicalizationPass.cpp  DecomposeHexKLMatmulPass.cpp  DecomposeTensorConcatPass.cpp  DivToMulOptimizationPass.cpp  DoubleBufferDMALoweringExtPass.cpp  DoubleBufferDMALoweringPass.cpp  DoubleBufferGenericS1.cpp  DoubleBufferGenericS2.cpp  DoubleBufferPlanRewriteExtPass.cpp  DoubleBufferPlanRewritePass.cpp  EliminateRedundantUnpackPackPass.cpp  EraseUnusedLinalgOperands.cpp  ExpandBoolVec.cpp  ExpandMathOpsPass.cpp  FastInversePass.cpp  FoldCastsIntoMatmul.cpp  FoldMulFByZeroPass.cpp  FoldPackUnpackConstantsPass.cpp  FoldResourceTransposePass.cpp  ForceHVXCrouton.cpp  GeneralizePass.cpp  HexagonLWPInstrumentation.cpp  HoistDoubleBufferCopyInsPass.cpp  HoistScalarOps.cpp  InsertScratchArgPass.cpp  LinalgUtils.cpp  LowerHexKLMatmulToMacroPass.cpp  LowerLibdevicePass.xx  LowerTPtr.cpp  LowerTTX.cpp  LowerTmTensor.cpp  (+23 more)
lib/triton-shared/Analysis/: MaskAnalysis.cpp  OpFoldResultUtils.cpp  PtrAnalysis.cpp  UseAnalysis.cpp
lib/triton-shared/AnalysisStructured/: PtrAnalysis.cpp
lib/triton-shared/Utils/: Utils.cpp
resources/: db.mlir  db_block_descriptor_reduce_schedule_ext.mlir  db_block_descriptor_schedule_ext.mlir  db_fix_load_compute.mlir  db_fuse_sum_add.mlir  db_load_store_ext.mlir  db_load_store_ext_out_reuse_load.mlir  db_loop_with_result.mlir  db_matmul.mlir  db_multi_compute.mlir  db_non_const.mlir  db_reduce.mlir  db_reduce_dim.mlir  db_reduce_in_loop.mlir  db_test.mlir  sample.py  test.mlir  tmp.mlir
(+135 files in other folders)
